# mcp.cpp

./: CMakeLists.txt
include/: mcp_message.h  mcp_resource.h  mcp_server.h  mcp_sse_client.h  mcp_tool.h
src/: CMakeLists.txt  mcp_sse_client.cpp  mcp_stdio_client.cpp  mcp_tool.cpp
